tipletSum - set answer concise